[package]
name = "mesh_monitor"
version = "0.1.0"
authors = ["liucehngyiu <wanchengquan@hzsaiyue.com>"]
edition = "2018"
[dependencies]
paho-mqtt = {version = "0.7.x", default-features = false, features = ["bundled"]}
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
rustc-serialize = "0.3.18"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0.1"
websocket = "0.26.2"
async-std = { version = "1.5", features = ["attributes"] }
